appId: ${MAESTRO_APP_ID}
---
- clearState
- clearKeychain
- launchApp
- runFlow:
    when:
      platform: ios
    commands:
      - tapOn: 'http://localhost:8081'
      - swipe:
          from:
            text: 'Connected to:'
          direction: DOWN
      - assertNotVisible: 'Connected to:'
